Converting data to tensorflow

--- a/model.ipynb
+++ b/model.ipynb
@@ -70,20 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading each directory (May need to reshape due to data imbalances)\n",
-    "cv19_images, cv19_labels = load_images(cv19_dir, 'COVID')\n",
-    "pn_images, pn_labels = load_images(pn_dir, 'PNEUMONIA')\n",
-    "tb_images, tb_labels = load_images(tb_dir, 'TUBERCULOSIS')\n",
-    "normal_images, normal_labels = load_images(normal_dir, 'NORMAL')\n"
+    "cv19_images, cv19_labels = load_images(cv19_dir, 3) # 3 for covid\n",
+    "pn_images, pn_labels = load_images(pn_dir, 2) # 2 for pneumonia\n",
+    "tb_images, tb_labels = load_images(tb_dir, 1) # 1 for tb\n",
+    "normal_images, normal_labels = load_images(normal_dir, 0) # 0 for healthy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,39 @@
     "    len(normal_images),\n",
     "    len(normal_labels)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total length of images:  2000 \n",
+      "Total length of labels:  2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Combining all arrays into one array for images and labels\n",
+    "all_images = cv19_images + pn_images + tb_images + normal_images\n",
+    "all_labels = cv19_labels + pn_labels + tb_labels + normal_labels\n",
+    "\n",
+    "print(\"Total length of images: \", len(all_images), \"\\nTotal length of labels: \", len(all_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting to Tensorflow dataframe\n",
+    "all_images = tf.convert_to_tensor(all_images, dtype=tf.float32) / 255.0 # Normalize and convert\n",
+    "all_labels = tf.convert_to_tensor(all_labels, dtype=tf.float32)"
    ]
   }
  ],
