--- a/model.ipynb
+++ b/model.ipynb
@@ -706,7 +706,7 @@
     "\n",
     "# Plot\n",
     "plt.figure(figsize=(8, 6))\n",
-    "class_names = ['COVID', 'PNEUMONIA', 'TUBERCULOSIS', 'NORMAL']  # Adjust to your class names\n",
+    "class_names = ['COVID', 'PNEUMONIA', 'TUBERCULOSIS', 'NORMAL']\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=class_names, yticklabels=class_names)\n",
     "plt.xlabel('Predicted Labels')\n",
     "plt.ylabel('True Labels')\n",
